// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Рендер Один символ 1`] = `
Array [
  <style>
    .className1::before {content: "А"}.className2 {display: none}
  </style>,
  <span
    className="className1"
  >
    <span
      className="className2"
    >
      Внг
    </span>
  </span>,
]
`;

exports[`Рендер Пустая строка 1`] = `
<style>
  
</style>
`;

exports[`Рендер Текст "Здесь могла быть ваша реклама" 1`] = `
Array [
  <style>
    .className1::before {content: "Здecь "}.className2 {display: none}.className3::before {content: "мoгла б"}.className4 {display: none}.className5::before {content: "ыть вa"}.className6 {display: none}.className7::before {content: "ша "}.className8 {display: none}.className9::before {content: "pe"}.className10 {display: none}.className11::before {content: "кламa"}.className12 {display: none}
  </style>,
  <span
    className="className1"
  >
    <span
      className="className2"
    >
      НПЙдЗ
    </span>
  </span>,
  <span
    className="className3"
  >
    <span
      className="className4"
    >
      йя
    </span>
  </span>,
  <span
    className="className5"
  >
    <span
      className="className6"
    >
      Яя
    </span>
  </span>,
  <span
    className="className7"
  >
    <span
      className="className8"
    >
      А
    </span>
  </span>,
  <span
    className="className9"
  >
    <span
      className="className10"
    >
      БэЬгР
    </span>
  </span>,
  <span
    className="className11"
  >
    <span
      className="className12"
    >
      ЗОНЯШ
    </span>
  </span>,
]
`;
